test/typecheck/fail/union_recf.sail

union U = {
  Ctor : U -> U
}
